# smol

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
assets/scss/: main.scss
src/: cocomel.rs  main.rs
templates/: index.html  results.html
